German Army Tree
ROMMEL LANDSCHIFFEN GO BRRRRRRRRRRRRRRRRRRRRRRRRRR

--- a/localisation/english/PB_Germany_l_english.yml
+++ b/localisation/english/PB_Germany_l_english.yml
@@ -456,33 +456,53 @@ PB_GER_China_Management:0 "Deutchsland in China"
   PB_GER_Empire_Management_Asia_Recognize_NRA:0 "Recognize the Dali Government"
   PB_GER_Empire_Management_Asia_Recognize_Qing:0 "Retain Diplomatic ties with the Qing"
   PB_GER_Empire_Management_Asia_Sino_German_Mission:0 "Sinos in Stahlhelms"
-  PB_GER_Empire_Management_Asia_Exploit_Qing:0 "Aufsichtsrat der Ostasiatischen Generalverwaltung"
-
+  PB_GER_Empire_Management_Asia_Exploit_Qing:0 "Aufsichtsrat der Ostasiatischen Generalverwaltung" 
+  #ARMY TREE
   PB_GER_Military_Focus:0 "Reform the Reichsarmee"
-
+  PB_GER_Military_Focus_desc:0 "Since our victory in the Great War, the Reichsarmee has sadly been allowed to decay over the years. Our generals have become complacent, believing the tactics that got us through the bloodshed of the Great War will surely get us through another. They could not be more wrong. Spies in Paris and Moscow tell of terrifying new weapons and radical schools of military thought. Drastic change is in order if we are not to be swept away to the dustbin of history."
+  
   PB_GER_Mobile_Warfare_Doctrine:0 "Mobility is the Future"
+  PB_GER_Mobile_Warfare_Doctrine_desc:0 "During the Great War, experiments with early mechs and landships saw terrific results on the Western Front, crushing French troops with ease at the cost of minimal casualties. In the years since, this technology has advanced from a mere novelty to a terrifyingly powerful form of weapon. The Reichsarmee of the future should use strikes by mobile, armored forces to blow open enemy lines and destroy our enemies before they have the chance to regroup. "
   
   PB_GER_Support_Reform_Group:0 "Support the Reformgruppe"
-  PB_GER_Keitel_Deep_Defense:0 "Keitel's Deep Defense Doctrine"
+  PB_GER_Support_Reform_Group_desc:0 "The Reichsarmee is a bastion of conservatism in every sense of the word. With the General Staff led by old men still stuck in the Great War, we should instead promote younger, more adventurous officers colloquially known as the \"Reformgruppe\" to eventually take their place. In the meantime, they can get to work preparing the military of the future."
+  PB_GER_Keitel_Deep_Defense:0 "Keitel's Deep Defense Doctrine"  #KEITEL DOCTRINE - Diggy Diggy Hole 
+  PB_GER_Keitel_Deep_Defense_desc:0 "General Wihelm Keitel favors a system of defense-in-depth to reinforce the Reichsarmee against an initial assault by our enemies. After falling back to prebuilt systems of fortifications and natural defenses, we could wear out our enemies to the bone and resist even in the event of a two front war."
   PB_GER_Keitel_Deep_Defense_Rifles:0 "Exponential Rifle Production"
+  PB_GER_Keitel_Deep_Defense_Rifles_desc:0 "The Reichsarmee has taken significant reductions in manpower and armaments since the end of the Great War. With rising tensions in Europe, Keitel has requested this trend be reversed. The first step towards re-armament must be increasingly large productions of modern rifle designs to ensure we will not face equipment shortages in the event of another Great War."
   PB_GER_Keitel_Deep_Defense_Entrenchment:0 "Entrenchment Doctrine"
+  PB_GER_Keitel_Deep_Defense_Entrenchment_desc:0 "Our new Deep Defense doctrine is useless without a proper system of fortifications. Keitel has proposed going beyond the simple trenches of the Great War. A new system of fortifications will be built not only in our borderlands, but deeper into the country too, in case of an initial breakthrough by the enemy into German lands. In addition, the Engineering Corps will be greatly expanded to make this project feasible."
   PB_GER_Keitel_Deep_Defense_Mechs_Designs:0 "Keitel's Mech Designs"
+  PB_GER_Keitel_Deep_Defense_Mechs_Designs_desc:0 "Early experiments with mech designs in the Great War were terrifyingly effective. However, we can expect those who were on the recieving end of these to have made some of their own by now. Keitel has given the General Staff several new Mech designs, including a new class of Mech known as the Quadropod. These four-legged beasts will be able to not only take a beating, but destroy just about anything in its path. Production is to be approved immediately."
   PB_GER_Keitel_Deep_Accuracy_Artillery_Mechs:0 "Only the Best Results Wanted"
+  PB_GER_Keitel_Deep_Accuracy_Artillery_Mechs_desc:0 "Karl Benz, one of Germany's finest inventors, once remarked that he wanted either \"The Best, or Nothing\". We must take the same approach with our military. Our artillery must be the most accurate, able to hit targets far away with ease and percision. Our new Mechs must be produced to the finest standards, able to withstand the elements and enemy fire without breaking down or being destroyed. While our enemies hope to overwhelm us with masses of conscripts, our men will be able and willing to resist whatever is thrown at them. Their hordes cannot beat blood and iron."
 
-  PB_GER_Rommel_Mobility_Doctrine:0 "Rommel's Mobility Doctrine"
+  PB_GER_Rommel_Mobility_Doctrine:0 "Rommel's Mobility Doctrine" #ROMMEL DOCTRINE - Haha landship go BRRRRRRRRRRRRRRRRRRRRRRRRRRRRR
+  PB_GER_Rommel_Mobility_Doctrine_desc:0 "General Erwin Rommel has made waves within the Reichsarmee for his support of his Bewegungskrieg Doctrine. This calls for the use of combined arms strikes of fast landships and air superiority to overwhelm our enemies and cut through their lines like butter. Though controversial, many younger officers have taken up his ideas. If our enemies expect a quick war, we shall be happy to oblige."
   PB_GER_Rommel_Mobility_Doctrine_More_Dakka:0 "More Landships Yesterday"
+  PB_GER_Rommel_Mobility_Doctrine_More_Dakka_desc:0 "Landships are powerful tools, able to rip through infantry and fortifications alike with ease. What could be better than a landship? A whole damn fleet of them!"
   PB_GER_Rommel_Mobility_Doctrine_Synthetics:0 "Conserving our Oil"
+  PB_GER_Rommel_Mobility_Doctrine_Synthetics_desc:0 "The creation of dedicated Landship Fleets comes with one critical disadvantage -- fuel consmuption. Germany has next to no natural sources of oil, and landships use great amounts of petrol. In collaboration with the Economic Ministry, Rommel has devised a plan for wartime fuel rationing paired with investments into synthetic oil technologies."
   PB_GER_Rommel_Mobility_Doctrine_Better_Tanks:0 "The Faster the Landship, the Quicker the Victory"
+  PB_GER_Rommel_Mobility_Doctrine_Better_Tanks_desc:0 "Though landships have a reputation as armored beasts, Rommel views swiftness as a far more important element of a good landship design. Under his leadership, our engineers have gotten to work designing a more lightly armored landship. Though more vulnerable to enemy attack, its more powerful engine and powerful gun will make it swift and deadly, able to destroy enemy infantry and even other landships with ease."
   PB_GER_Rommel_Mobility_Doctrine_Tank_Training:0 "Training Anti-Landship Combat"
+  PB_GER_Rommel_Mobility_Doctrine_Tank_Training_desc:0 "Though we'd like to think our enemies won't respond to our new landships, in all likelihood the French and Russians have created powerful landships of their own. Unfortunately, without proper countermeasures, this would totally negate the advantage we get from our armored forces. A new training programme will be created to teach our infantrymen how to utilize makeshift anti-armor countermeasures and ensure our landships have proper infantry support."
   PB_GER_Standardize_Military_Production:0 "Standarize Military Production"
+  PB_GER_Standardize_Military_Production_desc:0 "Due to the extensive autonomy enjoyed by the German States, individual polities are responsible for the raising and armament of their own armed forces to serve under the command of the Reichsarmee. Unfortunately, this has resulted in a hodgepodge of uniforms and military equipment, making logistics an absolute nightmare. Much to the chagrin of local rulers, it's time we end this clusterfuck once and for all and enforce standardization of uniforms and equipment in the armed forces."
   PB_GER_Motor_Army:0 "An Army on Wheels"
+  PB_GER_Motor_Army_desc:0 "Landships are nice and all, but without infantry support they are vulnerable to enemy counterattacks. By mechanizing our infantry we can not only increase their protection to enemy fire but allow them to keep up with our armored spearheads, greatly increasing our army's efficiency in battle. In addition, trucks and armored transports will vastly improve our ability to properly supply the army in wartime."
   PB_GER_Mobile_Warfare_Boldest_Officers:0 "Desiring only the Bravest Soldiers"
+  PB_GER_Mobile_Warfare_Boldest_Officers_desc:0 "The horrors of war are many, and the experiences of the Great War have taught us there is no room for cowardice within the ranks. Under Rommel's leadership the bravest and boldest men and officers will be handsomely rewarded. A new class of Feldwebels and junior officers will rise to lead our men in the field. Let every man know: Not One Step Back!"
   PB_GER_Keitel_Wave_Offenses:0 "Wave Offensives"
-  PB_GER_Mobile_Warfare_Doctrine_Combine:0 "How to Combine the Two Braches?"
+  PB_GER_Keitel_Wave_Offenses_desc:0 "The concept of the wave offensive is rather simple. At first, the enemy may be able to resist our assaults using planned defenses and the such. After identifiying their weakpoints, we will crash wave after wave of offensives against the thinnest part of their lines before they inevitably drown in an ocean of their own blood."
+  PB_GER_Mobile_Warfare_Doctrine_Combine:0 "How to Combine the Two Branches?"
+  PB_GER_Mobile_Warfare_Doctrine_Combine_desc:0 "The Reichsarmee and the Luftwaffe currently stand as two independent commands. Though an independent Air Force brings us many advantages, namely our pilots not having to answer to men who have never been in a pilot's eat, Rommel believes that victory in the next war can only be achieved only by close cooperation between our land and air forces. He has set to work developing new theories on how to best utilize our growing air fleet in conjunction with infantry and landships. Some say it cannot be done, but Rommel begs to differ."
   PB_GER_Mobile_Warfare_Doctrine_Philosophy:0 "Refining the Philosophy of Movement Warfare"
+  PB_GER_Mobile_Warfare_Doctrine_Philosophy_desc:0 "Mobile Warfare, in some form or another has been a staple of war since the beginnings of civilization. From the chariots of the Ancient Egyptians to the modern landship, speed has always been a boon in crushing enemy defenses and seizing key objectives on the battlefield. With our recent innovations in military technology and doctrine, Rommel has sought to perfect the Bewegungskrieg once and for all. Blitzkrieg -- Lightning Warfare, will see us strike the enemy from the sky and ground alike with a deadly trifecta of air support, landship fleets, and armored infantry to punch a path to victory."
 
 
   PB_GER_Empower_Logistics_Department:0 "Empower the Logistics Department"
+  PB_GER_Empower_Logistics_Department_desc:0 "An rather forgettable French officer once said that \"an army marches on its stomach\". Perhaps if his descendants had listened, it may have been the French who triumphed in the Great War. We shall not make their mistakes. Our expansion of the army will require massive quantities of food, fuel, medical supplies, and raw materials to keep our war effort going and prevent the enemy from merely starving us into surrender. Per Rommel's request, the Logistics Department will be greatly expanded and given more seniority among the branches of the General Staff."
 
   PB_GER_Goering_Air_Doctrine:0 "Goering's Air Support Doctrine"
   PB_GER_Goering_Air_Doctrine_Filipino_Lessons:0 "Lessons of the Filipino Insurrection"
