What's my number, I wonder how your engine feels.
German LOC and a spelling error fix.

--- a/localisation/english/PB_Germany_l_english.yml
+++ b/localisation/english/PB_Germany_l_english.yml
@@ -873,8 +873,8 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
   germany.33.b:0 "Resorting to Civil Disobdience is wrong."
   germany.33.c:0 "What do they know about the hardships of life?"
 
-  germany.34.t:0 "Bavarian Enterprises furiuos about raised Taxes!"
-  germany.34.d:0 ""
+  germany.34.t:0 "Bavarian Enterprises furious about raised Taxes!"
+  germany.34.d:0 "A new law which was passed a few days ago in the region of Bavaria had various effects on the population, but most importantly it raised all taxes by 25%. Bavarian enterprises and the local population are furious with this change, and demand it be reverted immediately. One of the enterprises and some private citizens have even stated that they won’t be paying taxes until the change is undone, others are also considering doing this. The local government has said that this change has been done, because of the changing political and industrial landscape throughout Germany and Europe, thus Bavaria shouldn’t lag behind and shall industrialise. They have also stated that if a large group of people don’t pay their taxes, they will all be arrested, but they have also stated that both not paying and the arrests will put a strain on the Bavarian finances. The local government is still unsure of this, and are waiting for a good call to put the decision in stone."
   germany.34.a:0 "We do not have the time to deal with this."
   germany.34.b:0 "Give the most influential ones special exemptions."
   germany.34.c:0 "The state needs your Crowns."
@@ -964,10 +964,10 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
   germany.82.c:0 "I told you its a bad idea to make budget cuts regarding fire safety."
 
   germany.83.t:0 "Prussian Nationalists March in Küstrin"
-  germany.83.d:0 ""
-  germany.83.a:0 "Make sure that those people do not get any kind of weaponry."
+  germany.83.d:0 "Trumpets can be heard loud and wide throughout the town of Küstrin, footsteps approaching the town centre. A man shouts:‘Preußen über alles!’, immediately after the whole group of men join in and shout the same thing together. They march all day long shouting their ideals at the town folk. Police don't try to stop them, as they are ordered to stand down by their commander. They march late into the night, causing many sleepless nights. Until around 1 AM it stops. The town quiets down till morning, when people are awakened by trumpets once more, but this time not to march, but because their leader is meeting the mayor. He says he wants the town of Küstrin to unite with the neighbouring country willingly. The mayor does not respond immediately and says he needs to discuss it first. "
+  germany.83.a:0 "Make sure that those people don't get any kind of weaponry."
   germany.83.b:0 "Is this a joke? They want to be part of Prussia again?"
-  germany.83.c:0 "Arrest them, they are traitors."
+  germany.83.c:0 "Arrest them, they are traitors!"
 
   germany.84.t:0 "Erfurt Toxics leak into the Air"
   germany.84.d:0 "Accident this afternoon at the Erfurt Toxins Facility, located near the airport and west of the city centre. After a mishap in communication, a tank filled with toxins, which was being moved for train transport, hit a metal beam. A hole appeared, and out of it gas came pouring. Luckily none of the employees have been hurt by the gas, as it is mandatory to wear facemasks inside the facemasks at all times. However the effort to fix the leak has not yet been successful, but the manager of the facility assures everyone that it will be fixed within a few days, and that no measures have to be taken in terms of protection by the population of Erfurt.\n\nThe local government does not agree with the no protection policy, but do hope it can be fixed soon. They propose that the population should wear facemasks when being outside, to make sure everyone will be fine. They have also said that facemasks will be handed out by them, as not everyone can afford them.\n\nFor now however the only measures that have been taken is that they have temporarily closed the airport, and banned cars, traffic and people from entering an designated area around the facility, they will continue to do this until they know for certain the gas is no longer a threat."
