some little work

--- a/localisation/english/PB_Germany_l_english.yml
+++ b/localisation/english/PB_Germany_l_english.yml
@@ -1258,6 +1258,9 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
   PB_GER_Target_Berlin_Freikorps:0 "Target the Berlin Freikorps"
   PB_GER_Target_Bavarian_Freikorps:0 "Target the Bavarian Freikorps"
   PB_GER_Target_Rhine_Freikorps:0 "Target the Freikorps Units in the Rhine Area"
+  PB_GER_Target_Rhine_Jacobins:0 "Target the Rhineland Jacobins"
+  PB_GER_Target_Saxon_Jacobins:0 "Target the Saxon Jacobins"
+  PB_GER_Target_Vienna_Jacobins:0 "Target the Vienna Jacobins"
   PB_GER_Target_Czech_Legion:0 "Target the Czech Legion"
   PB_GER_Target_Alsace_National_Union:0 "Target the Alsace National Alliance"
   GER_PB_GER_Political_Violence_Timeout:0 "Outbreak of Political Violence"
