Localisation for Violence

--- a/localisation/english/PB_Germany_l_english.yml
+++ b/localisation/english/PB_Germany_l_english.yml
@@ -120,7 +120,11 @@
   PB_GER_Political_Violence_0:0 "Significant Political Violence"
   PB_GER_Political_Violence_0_desc:0 "Though Germany achieved near total victory in the Great War, the aftermath has been anything but victorious. With the economy in shambles, ill-intentioned radicals are stirring up trouble throughout the fatherland. Jacobin revolutionaries speak to packed coffee houses, spouting the doctrine of revolution and socialist utopia. Hardline nationalists pour into the beer halls of Bavaria and Berlin, eager to denounce everything from the Jacobins to the Jews. Outbreaks of political violence are not uncommon and thus far the administration has been unwilling to crack down on them openly for fear of exacerbating the issue."
   PB_GER_Political_Violence_Black:0 "The Brown Resistance"
+  PB_GER_Political_Violence_Black_1:0 "The Brown Resistance"
+  PB_GER_Political_Violence_Black_2:0 "The Brown Resistance"
   PB_GER_Political_Violence_Red:0 "The Red Traitors"
+  PB_GER_Political_Violence_Red_1:0 "The Red Traitors"
+  PB_GER_Political_Violence_Red_2:0 "The Red Traitors"
   PB_GER_Political_Violence_Mixed:0 "Polticial Extremism"
   PB_GER_Political_Violence_1:0 "Moderate Political Violence"
   PB_GER_Political_Violence_2:0 "Minor Political Violence"
@@ -837,23 +841,18 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
   germany.27.b:0 "Grant Prussia some of their claims"
   germany.27.c:0 "Grant all of it to Prussia"
 
-  germany.28.t:0 "Significant Unrest in the Rhineland"
-  germany.28.d:0 ""
-  germany.28.a:0 "Ignore the agitators"
-  germany.28.b:0 "Try and make some concessions"
-  germany.28.c:0 "Have them arrested"
+  germany.28.t:0 "The Jacobins in the Rhineland Fortify"
+  germany.28.d:0 "It seems someone leaked our information that we were about the raid the Jacobin Center in the Rhineland and they have begun fortifying themself in their bases.\n\nThey possess dozens of rifles and several machine guns, including grenades. Any confrontation with them will be bloody.\nBecause of this fact, some recommended dropping bombs on their bases to limit our own casualties and to show them that they can not even compare to our power. Others are opposed to the idea as this would cause unwanted damage and cause Unrest in the Rhineland."
+  germany.28.a:0 "Bomb them to Hell"
+  germany.28.b:0 "Send in the Troops"
 
-  germany.29.t:0 "Significant Unrest in Brandenburg"
-  germany.29.d:0 ""
-  germany.29.a:0 "Ignore the agitators"
-  germany.29.b:0 "Try and make some concessions"
-  germany.29.c:0 "Have them arrested"
+  germany.29.t:0 "Jacobins Defeated - Several Houses Destroyed"
+  germany.29.d:0 "The Jacobins have been cleared out - to bits.\n\nNo one expected this course of action.\nThe bombs hit their bases in the morning while most where still sleeping. A total of 36 bombs where dropped. Most of them hit their intented targets, though 1 one hit a civilian building and another a farm killing a cow.\n\nThe Jacobins in the Rhineland have surrendered and lay down their arms. While it is a great success, there is outrage about our brutal handling of the situation."
+  germany.29.a:0 "They did this to themself"
 
-  germany.30.t:0 "Significant Unrest in Bavaria"
-  germany.30.d:0 ""
-  germany.30.a:0 "Ignore the agitators"
-  germany.30.b:0 "Try and make some concessions"
-  germany.30.c:0 "Have them arrested"
+  germany.30.t:0 "Jacobins Defeated - High Casualties"
+  germany.30.d:0 "The Jacobins have been defeated but there was high number of casualties among the troops.\n\nWe attacked in the morning hoping to catch the Jacobins off guard. The trick did not work and dozens where gunned down by machine guns. The fighting evolved into brutal street fighting and soon flamethrowers and to be brought in to finally defeat them.\n\nThe Jaconbins in the Rhineland have been destroyed, but the cost of lives was high."
+  germany.30.a:0 "They will be remembered as Hereos"
 
   germany.31.t:0 "Coal Workers in Zwickau demand better Working Conditions"
   germany.31.d:0 "The Coal Mines in Zwickau have gone quiet these days. The Coal Workers demand better conditions regarding their safety.\n\nThe Coal Works in Zwickau and the surrounding areas are some of the largest in Germany and the Saxon Kingdom heavily depend on their production. But right now, no coal is being mined there.\nDue to extensive expansion and growing desire to extract more and more coal to suit the demands of our growing industry it seems like all safety standards in this endeavour have been forgotten.\nNew automatic equipment creates gases which damages the lungs of anyones who breathes them in, the massive coal diggers are not operated by well enough trained equipment causing several cases of human accidents, basic commodities are missing for several workers and so much more.\n\nThose workers now are striking and demanding better conditions, however this will be quite costly and the extraction of more coal is needed immediately."
