Grestin is a nice guy :D
Grestino :D

--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -393,11 +393,11 @@
   PBNews.101.a:0 "David vs Goliath"
 
   PBNews.102.t:0 "CORSICA FALLS"
-  PBNews.102.d:0 ""
+  PBNews.102.d:0 "Another Napoleon deposed as the French come knocking on the theoretical door of the island of Corsica. Previously ruled by Napoleon VI, but he has now given up his country as the French government claimed the island and sent an ultimatum. The French now have a better hold on the Mediterranean plus a better launching pad into the Italian Peninsula and into the North of Africa. It is not sure whether this is the end of French aggression, or only just the beginning."
   PBNews.102.a:0 "There is only one france"
 
   PBNews.103.t:0 "BASQUE FALLS"
-  PBNews.103.d:0 ""
+  PBNews.103.d:0 "Another French victory, as they have marched into the small country of Basque with little to no resistance. This has gathered little response from the international community, apart from Spain, who hopes to maybe get a chance to regain some lost territories. And restore the old Spanish-French border to how it was before. Spain has been getting close with France for a while now, which the English and Germans do not approve of, and have even embargoed Spain in the past because of it, these embargos are now gone however."
   PBNews.103.a:0 "Wait, which country is that?"
 
   PBNews.104.t:0 "IZZET PASHA: DEAD" #old
@@ -461,11 +461,11 @@
   PBNews.118.a:0 "They Are Getting Desperate"
 
   PBNews.119.t:0 "MEXICAN BEATS COALITION"
-  PBNews.119.d:0 ""
+  PBNews.119.d:0 "Triumphant Mexican troops enter the city of San Francisco as they reign victorious over the coalition. Thousands have died in the name of the Mexican Empire. What is to be done with the new territories is not yet announced, but the population assumes they will be integrated into Mexico proper. This victory has certainly changed Mexicos position on the world stage, as they are now a force to be reckoned with. It is still up in the air what Mexico will do next, will they stay at peace or seek out new enemies?"
   PBNews.119.a:0 "An Empire Restored?"
 
   PBNews.120.t:0 "COALITION BEATS MEXICO"
-  PBNews.120.d:0 ""
+  PBNews.120.d:0 "Triumphant coalition troops enter Mexico City as they reign victorious over the Mexican Empire. A true humiliation for the Mexicans. The coalition plans to annex Mexico in its entirety and unify under a single banner. To form a United State, with a shared culture and values. This new state will surely be a force to reckoned with on the ever changing world stage, but seeing as their actions were out of defence it is unlikely that more wars will succeed this one in the near future. We will have to see."
   PBNews.120.a:0 "An Empire Defeated"
 
   PBNews.121.t:0 "D'ANNUNZIO GOVERNMENT FALLS"
