Railways, Supply Hubs and VP. Balkans, Poland, Belarus

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -15,6 +15,7 @@
  VICTORY_POINTS_3535:0 "Leipzig"
  VICTORY_POINTS_6282:0 "Stettin"
  VICTORY_POINTS_11372:0 "Köslin"
+ VICTORY_POINTS_11399:0 "Lublin"
  VICTORY_POINTS_6332:0 "Königsberg"
  VICTORY_POINTS_6377:0 "Hannover"
  VICTORY_POINTS_6389:0 "Kiel"
@@ -41,6 +42,13 @@
  VICTORY_POINTS_3544:0 "Warsaw"
  VICTORY_POINTS_9427:0 "Krakow"
  VICTORY_POINTS_362:0 "Danzig"
+ VICTORY_POINTS_11301:0 "Białystok"
+ VICTORY_POINTS_572:0 "Luzk"
+ VICTORY_POINTS_560:0 "Pinsk"
+ VICTORY_POINTS_3203:0 "Mosyr"
+ VICTORY_POINTS_3350:0 "Bobruisk"
+ VICTORY_POINTS_9289:0 "Mogiljow"
+ VICTORY_POINTS_11342:0 "Pastawy"
  VICTORY_POINTS_3320:0 "Wilno"
  VICTORY_POINTS_3392:0 "Brzesc Litewski"
  VICTORY_POINTS_3393:0 "Grodno"
@@ -101,6 +109,7 @@
  VICTORY_POINTS_9898:0 "Montpellier"
  VICTORY_POINTS_9909:0 "Nice"
  VICTORY_POINTS_11465:0 "Nantes"
+ VICTORY_POINTS_11467:0 "Gliwice"
  VICTORY_POINTS_11483:0 "Lille"
  VICTORY_POINTS_11516:0 "Nancy"
  VICTORY_POINTS_11548:0 "Calais"
