--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -94,7 +94,7 @@
  STATE_93:0 "Wolyn"
  STATE_94:0 "Polesie"
  STATE_95:0 "Nowogrodek"
- STATE_96:0 "Wilno"
+ STATE_96:0 "Pastawy"
  STATE_97:0 "Bialystok"
  STATE_98:0 "Plock"
  STATE_99:0 "Jutland"
