--- a/localisation/english/PB_Germany_l_english.yml
+++ b/localisation/english/PB_Germany_l_english.yml
@@ -1081,6 +1081,27 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
   germany.64.d:0 "The Jacobin Clique in Vienna was always well known. Not for its popularity or numbers but for it's extremism. The Jacobins in Vienna regularly conducted assasinations, car bombings or other wicked things to pursue their goals. Despite their methods their attracted quite a sizeable amount of followers. The people always feared a possible confrontation between them and the state due to potential of its destruction.\n\nBut the day had to come put down those maniacs.\n\nAfter identifying their base of operations and members, the Secret Service and Military Police planned for weeks to take them down.\nWhen the night finally came, the plan was set in motion.\nRazormaidens climbed through the windows, Combatagate's sneaked through the canalisation into their basements and Snipers were on every corner of the city. Everything went according to plan. The units acted switftly and merciless and took the Jacobins completetly by suprise.\n\nBut it was not enough to overcome their fanatism.\n\nOne member escaped the battle for a few second, ran into a special room, pressed a handle an-...."
   germany.64.a:0 "The Jacobins are truly not human"
 
+  germany.65.t:0 "Right Wing Terrorist Group in Frankfurt Apprehended"
+  germany.65.d:0 ""
+  germany.65.a:0 "Missed a bullet there... literally"
+
+  germany.66.t:0 "Leader of the Jacobin Hamburg Group Arrested"
+  germany.66.d:0 ""
+  germany.66.a:0 "Be careful of what you say"
+
+  germany.67.t:0 "Austrian Neo Imperalists establish Barricades over Upper Austria"
+  germany.67.d:0 ""
+  germany.67.a:0 "Take them out by force"
+  germany.67.b:0 "Trust the people"
+
+  germany.68.t:0 "Bloody Steet Fighting in Austria leaves the Imperialists Broken"
+  germany.68.d:0 ""
+  germany.68.a:0 "An ugly affair"
+
+  germany.69.t:0 "Local Austrians Beat up the Imperialists"
+  germany.69.d:0 ""
+  germany.69.a:0 "The will of the People"
+
   germany.70.t:0 "A Response to Mister Hugenberg's Remarks Regarding the Jewish People"
   germany.70.d:0 "Slogans and anti-semetic slander filled the halls of the German government as the Chancellor stood his place at the podium. Rathenau waited patiently for these voices of discontent to stay silent, his gaze searched through the Reichstag before falling upon Hungenberg for a brief moment. And then, the Chancellor began his response:\n\n“Honourable and noble members of this Diet, you have heard very...colourful terms used in response to one of our most recent pieces of legislation, talk of spies and conspiracy amongst the Jewish population of our nation, especially from the right honourable Hugenberg. But I come to you requesting a chance to speak and offer my perspective on our nation’s actions. And fortunately I have been granted an opportunity to do so.\n\nMany of those who do not approve of the actions of our government claim that Jews are traitors, thieves, with more than a few of them disputing their very humanity, along with their citizenship and the status of this land as their home. You call us traitors and cowards, but ignore our sacrifices during the war. Hundreds if not thousands of Jews volunteered, giving life and limb for Germany. You claim we have taken our money, while it is Jewish businesses that contribute to our economy. And you say that Germany is not our land, that there is no greater honour than driving us out. But we have lived here for centuries, long before any of you were born. Even in the days of the Holy Roman Empire, my people were here; we have earned our place in Germany.\n\nYou claim that such beliefs and practices are noble, but where is the honour in driving away honest hard working people who sacrificed everything for a country that berates them! That does everything they can to fix our ailing economy, just as any other German would! All while you ignore the storm clouds forming over Europe, the Revanchism of France grows as it eyes to absorb our territory. If you truly cared for Germany, you would see the real threat rather than chasing make believe boogeymen who only exist in your imagination! Bring us together, instead of dividing us apart.”\n\nThe ministers and politicians cheered, waving the flags of Germany, celebrating this speech as a victory in itself. Over the tide of anti-semitism, as Rathenau looked out to the crowd, he could see the quiet fury of Hungenberg, he knew this would be an uphill battle. But this was a start."
   germany.70.a:0 "Germans! Here we stand!"
@@ -1515,11 +1536,14 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
   GER_All_Unrest_Condition_Twentyfive_tt:0 "§YUnrest in all Volksstaaten is above§! §R25§!\n"
   GER_All_Unrest_Condition_Fiveteen_tt:0 "§YUnrest in all Volksstaaten is above§! §R15§!\n"
 
-  PB_GER_Rhineland_Unrest_tooltip:0 "§YUnrest in the Rhineland is above§! §R5%§!\n"
-  PB_GER_Brandenburg_Unrest_tooltip:0 "§YUnrest in Brandenburg is above§! §R5%§!\n"
-  PB_GER_Bavaria_Unrest_tooltip:0 "§YUnrest in Bavaria is above§! §R5%§!\n"
-  PB_GER_Saxony_Unrest_tooltip:0 "§YUnrest in Saxony is above§! §R5%§!\n"
-  PB_GER_Hannover_Unrest_tooltip:0 "§YUnrest in Hannover is above§! §R5%§!\n"
+  PB_GER_Rhineland_Unrest_tooltip:0 "§YUnrest in the Rhineland is above§! §R5§!\n"
+  PB_GER_Brandenburg_Unrest_tooltip:0 "§YUnrest in Brandenburg is above§! §R5§!\n"
+  PB_GER_Bavaria_Unrest_tooltip:0 "§YUnrest in Bavaria is above§! §R5§!\n"
+  PB_GER_Saxony_Unrest_tooltip:0 "§YUnrest in Saxony is above§! §R5§!\n"
+  PB_GER_Hannover_Unrest_tooltip:0 "§YUnrest in Hannover is above§! §R5§!\n"
+  PB_GER_Austria_Unrest_tooltip:0 "§YUnrest in Austria is above§! §R5§!\n"
+  PB_GER_Frankfurt_Unrest_tooltip:0 "§YUnrest in Frankfurt is above§! §R5§!\n"
+  PB_GER_Elsass_Unrest_tooltip:0 "§YUnrest in Elsass is above§! §R5§!\n"
 
   PB_GER_Sudwest_Intervention_Success:0 "§YThe Intervention in South Africa was§! §GSuccessful§!\n"
   PB_GER_Sudwest_Intervention_Failure:0 "§YThe Intervention in South Africa was a§! §RFailure§!\n"
