--- a/localisation/english/PB_Germany_l_english.yml
+++ b/localisation/english/PB_Germany_l_english.yml
@@ -950,8 +950,8 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
   germany.80.b:0 "Deploy the Razormaidens."
   germany.80.c:0 "Kill all these traitors, no restraints."
 
-  germany.81.t:0 "Torch March in Benfeld"
-  germany.81.d:0 "It would've been a quiet night in the town of Benfeld. If it wasn't for the Frenchmen holding a torch march late into the friday night. They shouted, they yelled and some even fought the police. In the end however the police wasn't able to stop them. They let it happen, they worried the situation would slip out of hand if the whole police force assaulted and arrested the marchers. These Frenchmen weren't marching just to cause a sleepless night however, they protested because they want an end to the German 'occupation'. The German government has issued a statement that they do not tolerate this type of behaviour, but aren't going to take any actions to stop it from happening in the future."
+  germany.81.t:0 "Torch March in Bolzen"
+  germany.81.d:0 "It would've been a quiet night in the town of Bolzen. If it wasn't for the men holding a torch march late into the friday night. They shouted, they yelled and some even fought the police. In the end however the police wasn't able to stop them. They let it happen, they worried the situation would slip out of hand if the whole police force assaulted and arrested the marchers. These men weren't marching just to cause a sleepless night however, they protested because they want an end to the German dominance in the region. The German government has issued a statement that they do not tolerate this type of behaviour, but aren't going to take any actions to stop it from happening in the future."
   germany.81.a:0 "I think they just set their own flag on fire?"
   germany.81.b:0 "They are just a small miniority, they have no impact let them be."
   germany.81.c:0 "Break up their march."
