Some stuff. Gotta get around finish the British focus filters thingy

--- a/localisation/english/PB_France_l_english.yml
+++ b/localisation/english/PB_France_l_english.yml
@@ -1514,15 +1514,21 @@
   PB_Anti_Air_Investments:0 "Anti Air Investments"
   PB_Anti_Air_Investments_desc:0 "Just as we plan to destroy our enemies economic capabilities and will to fight we should also expect them to do the same to us. In preparation for this we must establish anti-air emplacements all around France else we face destruction from the skies. "
   PB_FRA_Increase_Fighter_Development_Funding:0 "Increase Fighter Development Funding"
+  PB_FRA_Increase_Fighter_Development_Funding_desc:0 "Fighters will play a pivotal role in our planned air operations, it is because of this fact that we must, at any cost, make sure these fighter models are of the highest qualiy and are well maintained."
   PB_FRA_Increase_CAS_Development_Funding:0 "Increase CAS Development Funding"
   PB_FRA_Increase_CAS_Development_Funding_desc:0 "Ground support air units must not lag behind their more strategically important fighter brothers. New investments into these aerial subunits will help a great deal in our quest for dominace over the skies"
   PB_FRA_General_Production_Efficiencies:0 "General Production Efficiencies"
   PB_FRA_General_Production_Efficiencies_desc:0 "Our military industry is already full of various production requests, from mechs to simple rations anything more may make the entire some crawl to a halt. It is therefore in our best interests that we full simplify the production of aerial materials and productions so that we don't burden our industry anymore."
   PB_Kings_Of_The_Sky:0 "Kings Of The Sky"
+  PB_Kings_Of_The_Sky_desc:0 "With our modernization efforts of the French airforce nearing completion we can confidently say that we will be able to dominate the skies against any potential threats. "
   PB_FRA_Air_Ambitions:0 "Air Ambitions"
+  PB_FRA_Air_Ambitions_desc:0 "Some may say we are insane to take on the burden of fighting the entire air capabilities of Germany, Britain, and their respective empires but we know that relying on others is a mistake too many have made. France shall rule Europe with her mighty army, modernized fleet, and undisputed overlordship over the skies, because if not us then who then?"
   PB_FRA_Aluminum_Processing:0 "Aluminum Processing"
+  PB_FRA_Aluminum_Processing_desc:0 "Aluminum is a core component of aeroplane production, if we were to ever find ourselves lacking in this core resource then our production capabilities would certainly suffer. we must expand our already existing bauxite mining zones to keep up with both current and future demands. "
   PB_FRA_Pilot_Discipline:0 "Pilot Discipline"
+  PB_FRA_Pilot_Discipline_desc:0 "Whilst we do like to romanticize the idea of the rebellious and over-confident pilot we must adhear to strict protocols and policies. These men are risking life and limb to fight in our airforce so they best maintain a professional atittude during their service."
   PB_FRA_Increase_Bomber_Development_Funding:0 "Increase Bomber Development Funding"
+  PB_FRA_Increase_Bomber_Development_Funding_desc:0 "If we plan on relying on bombers to do the heavy work in our pursuit of enemy annihilation then they best get top of the line tech. Any perceived faults will be exploited by our enemies and will hinder our aerial capabilities."
   PB_FRA_Increase_Heavy_Fighter_Development_Funding:0 "Increase Heavy Fighter Development Funding"
   PB_FRA_Air_Games:0 "Air Games"
   PB_FRA_Increase_Production_Capabilities:0 "Increase Production Capabilities"
